--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.1.1 (2023-03-08)
+--------------------------
+Ensure launch_template changes trigger instance_refresh (#1)
+
 Version 0.1.0 (2023-02-22)
 --------------------------
 Initial release
