--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.2.1 (2023-01-16)
+--------------------------
+Install docker using amazon-linux-extras (#7)
+
 Version 0.2.0 (2023-06-22)
 --------------------------
 Remove deprecated tags input for asg resource (#4)
